@@ -1,3 +1,9 @@
+1998-01-01  Tim Pierce  <twp@skepsis.com>
+
+	A better fix to the SLIB identity problem -- thanks to Marius Vollmer.
+	* slib.scm (identity): Unmake public.
+	(slib:eval): Evaluate inside `slib-module'.
+
 1997-12-24  Tim Pierce  <twp@skepsis.com>
 
 	* boot-9.scm: Doc fix.
